The labels of app were refactored in one method.

--- a/resources/res.qrc
+++ b/resources/res.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>moto.jpg</file>
-	<file>motogp_logo.jpeg</file>
+	<file>motogp_logo.jpg</file>
     </qresource>
 </RCC>
